--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "private": true,
     "dependencies": {
         "@reach/router": "^1.2.1",
+        "howler": "^2.1.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-howler": "^3.7.4",
         "react-scripts": "3.0.1",
         "react-sound": "^1.2.0",
         "styled-components": "^4.3.2"
