--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-icons": "^3.7.0",
+        "react-is": "^16.8.6",
         "react-scripts": "3.0.1",
         "react-sound": "^1.2.0",
-        "styled-components": "^4.3.2"
+        "styled-components": "^5.0.0-beta.8"
     },
     "scripts": {
         "start": "react-scripts start",
