--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-icons": "^3.7.0",
+        "react-image": "^2.1.3",
         "react-is": "^16.8.6",
         "react-scripts": "3.0.1",
         "react-sound": "^1.2.0",
+        "react-visibility-sensor": "^5.1.1",
         "styled-components": "^5.0.0-beta.8"
     },
     "scripts": {
