--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "react-dom": "^16.8.6",
         "react-icons": "^3.7.0",
         "react-image": "^2.1.3",
+        "react-image-lightbox": "^5.1.0",
         "react-is": "^16.8.6",
+        "react-medium-image-zoom": "^3.1.1",
         "react-scripts": "3.0.1",
         "react-sound": "^1.2.0",
         "react-visibility-sensor": "^5.1.1",
