--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -2,7 +2,7 @@
     "releases": [{
         "title": "Hot Tap",
         "artist": "Hot Tap",
-        "release date": "12/08/2019",
+        "releaseDate": "12/08/2019",
         "tracks": [{
                 "id": "A1",
                 "title": "Lane Creeper",
@@ -32,6 +32,7 @@
             "3.jpg",
             "4.jpg"
         ],
-        "url": "https://www.wantapes.com/releases/ht-/ht"
+        "url": "https://www.wantapes.com/releases/ht-/ht",
+        "colors": { "background": "#a0ecff", "2nd": "#ff3030" }
     }]
 }
