--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -8,31 +8,31 @@
                 "title": "Lane Creeper",
                 "length": 5.39,
                 "glyph": "†",
-                "uri": "https://www.wantapes.com/trax/A1-Lane-Creeper.mp3"
+                "uri": "https://www.wantapes.com/releases/ht-ht/trax/A1-Lane-Creeper.mp3"
             },
             {
                 "id": "A2",
                 "title": "Gooseberry",
                 "length": 4.47,
                 "glyph": "†",
-                "uri": "https://www.wantapes.com/trax/A2-Gooseberry.mp3"
+                "uri": "https://www.wantapes.com/releases/ht-ht/trax/A2-Gooseberry.mp3"
             },
             {
                 "id": "B1",
                 "title": "Almost Definitely Nothing",
                 "length": 12.01,
                 "glyph": "‡",
-                "uri": "https://www.wantapes.com/trax/B1-Almost-Definitely-Nothing.mp3"
+                "uri": "https://www.wantapes.com/releases/ht-ht/trax/B1-Almost-Definitely-Nothing.mp3"
             }
         ],
         "buyCode": "8PLDYY7R9GCBN",
         "photos": [
-            "1.jpg",
-            "2.jpg",
-            "3.jpg",
-            "4.jpg"
+            "TapeImage1.jpg",
+            "TapeImage2.jpg",
+            "TapeImage3.jpg",
+            "TapeImage4.jpg"
         ],
-        "url": "https://www.wantapes.com/releases/ht-/ht",
-        "colors": { "background": "#a0ecff", "2nd": "#ff3030" }
+        "baseUrl": "https://www.wantapes.com/releases/ht-ht/",
+        "colors": { "background": "#a0ecff", "other": "#ff3030" }
     }]
 }
