--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@reach/router": "^1.2.1",
+        "lodash": "^4.17.15",
         "normalized-styled-components": "^2.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
