--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/back-end
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+/back-end/node_modules
 
 # testing
 /coverage
