adding dummy cover art to chankle

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -76,6 +76,6 @@
             "background": "#0a6649",
             "other": "#ff7733"
         },
-        "coverArt": ""
+        "coverArt": "https://www.wantapes.com/releases/ht-ht/img/cover.jpg"
     }]
 }
